fix: mobile input tracking
turns out mobile keyboard events are messed up at least on android

--- a/src/environment/App/SmartTextArea.css
+++ b/src/environment/App/SmartTextArea.css
@@ -22,7 +22,7 @@
 }
 
 .smart-text-area {
-  width: 500px;
+  width: 90vw;
   height: 400px;
 }
 
